fix: class name

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
     --z-index-out: 1;
     --z-index-ball: 2;
     --z-index-modal: 100;
+    --z-index-confetti: 200;
     --color-primary: #ffcf00;
     --color-base: #feefe5;
     --color-warning: #ee6123;
@@ -112,7 +113,7 @@ body {
     place-items: center;
 }
 
-.start {
+.titleView {
     background-color: var(--color-primary);
     color: #fff;
     display: grid;
@@ -166,7 +167,7 @@ body {
     display: none;
 }
 
-.wrapper:has([name='start']:checked) .start {
+.wrapper:has([name='start']:checked) .titleView {
     display: none;
 }
 
@@ -324,7 +325,7 @@ body {
 
 .confetti span {
     position: absolute;
-    z-index: 200;
+    z-index: var(--z-index-confetti);
     opacity: 1 !important;
     top: -100%; /*アニメーション以外の紙吹雪を非表示*/
     left: 0;
